tests/snapshots/run_wpt_conformance__onnx_div_float32_5D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "div.https.any.js",
    "div float32 5D tensors",
    "onnx",
    "PASS",
)
