tests/snapshots/run_wpt_conformance__onnx_div_float32_broadcast_4D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "div.https.any.js",
    "div float32 broadcast 4D to 4D",
    "onnx",
    "PASS",
)
