tests/snapshots/run_wpt_conformance__onnx_div_int32_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "div.https.any.js",
    "div int32 4D tensors",
    "onnx",
    "PASS",
)
